--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
-    "start": "babel-node ./node_modules/webpack/bin/webpack.js serve --config webpack.config.cjs --mode development",
+    "start": "babel-node ./node_modules/webpack/bin/webpack.js serve --config webpack.config.js --mode development",
     "build": "webpack --config webpack.config.js --mode production",
     "test": "echo \"Error: no test specified\" && exit 1",
     "eject": "react-scripts eject"
